@@ -9,6 +9,7 @@ ctags-@VERSION@ (@DATE@)
 * Added support for new language: VHDL, contributed by Nicolas Vincent [VHDL, Bug #1943306].
 * Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
 * Added support for class and member variables [PHP, Bug #1037086].
+* Fixed parsing of method parameter annotations, fix contributed by "blaisorblade" [Java, Bug #2049723, #2117073].
 * Fixed parsing of global scope qualifiers in base class lists [C++, Bug #1799343].
 * Fixed bug where namespace members were given kinds corresponding to globals [C++, Bug #1924919, #1575055].
 * Fixed parsing of "else" [C#, Bug #1830344].
